<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="305dp">

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonRecords"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nameHelpButton" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonOptions"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nameStartButton" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/menu_tower" />

        <Button
            android:id="@+id/buttonOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonHelp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nameOptionsButton" />

        <Button
            android:id="@+id/buttonRecords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nameRecordsButton" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>