<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonMenuInOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nameMenuButton" />

        <CheckBox
            android:id="@+id/checkBoxChonometr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonMenuInOptions"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="50dp"
            android:text="@string/chronometr" />

        <CheckBox
            android:id="@+id/checkBoxSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkBoxChonometr"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/steps" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkBoxSteps"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="79dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/textInOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countDisks" />

            <RadioButton
                android:id="@+id/buttonCount3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3" />

            <RadioButton
                android:id="@+id/buttonCount4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4" />

            <RadioButton
                android:id="@+id/buttonCount5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5" />

        </RadioGroup>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>